--- a/QiuBai/res/layout/fragment_character_layout.xml
+++ b/QiuBai/res/layout/fragment_character_layout.xml
@@ -2,22 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-   	android:background="@color/fragment_picture_bg"
+    android:background="@color/fragment_picture_bg"
     android:orientation="vertical" >
- 
+
     <ListView
         android:id="@+id/listView_fragment_character"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@null"
-        android:dividerHeight="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="10dp"
         android:cacheColorHint="@color/fragment_picture_transport"
-        android:listSelector="@color/fragment_picture_transport"
-         >
+        android:divider="@null"
+        android:dividerHeight="5dp"
+        android:listSelector="@color/fragment_picture_transport" >
     </ListView>
 
 </LinearLayout>
