--- a/QiuBai/res/values/colors.xml
+++ b/QiuBai/res/values/colors.xml
@@ -44,6 +44,7 @@
     <color name="login_tv_other_way_color">#AAAAAA</color>
     <color name="login_tv_login_color">#CCCCCC</color>
     <color name="login_tv_hint_color">#CCCCCC</color>
+    <color name="login_tv_forget_password_color">#000000</color>
     
     <!-- register activity -->
     <color name="register_bg_color">#F6F6F6</color>
