--- a/QiuBai/res/layout/fragment_character_layout.xml
+++ b/QiuBai/res/layout/fragment_character_layout.xml
@@ -5,7 +5,7 @@
     android:background="@color/fragment_picture_bg"
     android:orientation="vertical" >
 
-    <ListView
+    <com.qiubai.ui.CharacterListView
         android:id="@+id/listView_fragment_character"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,6 +13,6 @@
         android:divider="@null"
         android:dividerHeight="5dp"
         android:listSelector="@drawable/fragment_listview_press_bg" >
-    </ListView>
+    </com.qiubai.ui.CharacterListView>
 
 </LinearLayout>
