--- a/QiuBai/res/values/colors.xml
+++ b/QiuBai/res/values/colors.xml
@@ -63,4 +63,7 @@
     
     <!-- share_dialog.xml -->
     <color name="share_dialog_text">#7d7d7d</color>
+    
+    <!-- fragment_character_listview_head -->
+    <color name="fragment_head_gray">#2d2c2c</color>
 </resources>
