--- a/QiuBai/res/layout/cd_title.xml
+++ b/QiuBai/res/layout/cd_title.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/detail_title_back"
+            android:src="@drawable/cd_title_back"
             />
         
     </RelativeLayout>
@@ -34,7 +34,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_centerInParent="true"
-            android:src="@drawable/detail_title_action_bar"
+            android:src="@drawable/cd_title_action_bar"
             />
         
     </RelativeLayout>
