--- a/QiuBai/res/values/colors.xml
+++ b/QiuBai/res/values/colors.xml
@@ -18,10 +18,10 @@
     <color name="fragment_picture_transport">#efefef</color>
     <color name="fragment_picture_bg">#f6f6f6</color>
     
-    <!-- detail activity -->
-    <color name="detail_activity_bg_color">#F6F6F6</color>
-    <color name="detail_content_title_text_color">#000000</color>
-    <color name="detail_content_text_color">#333333</color>
+    <!-- character detail activity -->
+    <color name="cd_activity_bg_color">#F6F6F6</color>
+    <color name="cd_content_title_text_color">#000000</color>
+    <color name="cd_content_text_color">#333333</color>
     
     <!-- comment activity -->
     <color name="comment_activity_bg_color">#F6F6F6</color>
