--- a/QiuBai/res/layout/cd_title.xml
+++ b/QiuBai/res/layout/cd_title.xml
@@ -46,10 +46,10 @@
         >
         
         <TextView 
+            android:id="@+id/cd_tv_support"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="302534赞"
             android:textColor="#FF0000"
             />
         
