--- a/QiuBai/res/layout/login_activity.xml
+++ b/QiuBai/res/layout/login_activity.xml
@@ -23,13 +23,14 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_marginBottom="15dp"
-                android:layout_marginTop="20dp" >
+                android:layout_height="55dp"
+                >
 
                 <RelativeLayout
                     android:layout_width="40dp"
                     android:layout_height="20dp"
+                    android:layout_marginBottom="15dp"
+                	android:layout_marginTop="20dp" 
                     android:layout_alignParentLeft="true" >
 
                     <ImageView
@@ -41,14 +42,16 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="20dp"
+                    android:layout_height="50dp"
                     android:layout_marginLeft="40dp"
-                    android:layout_marginRight="30dp" >
+                    android:layout_marginRight="30dp"
+                    android:layout_marginTop="5dp"
+                    >
 
                     <EditText
                         android:id="@+id/login_user_email"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:layout_centerVertical="true"
                         android:background="@null"
                         android:hint="邮箱"
@@ -62,6 +65,8 @@
                 <RelativeLayout
                     android:layout_width="30dp"
                     android:layout_height="20dp"
+                    android:layout_marginBottom="15dp"
+                	android:layout_marginTop="20dp" 
                     android:layout_alignParentRight="true" >
 
                     <ImageView
@@ -84,13 +89,14 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginTop="15dp" >
+                android:layout_height="55dp"
+                >
 
                 <RelativeLayout
                     android:layout_width="40dp"
                     android:layout_height="20dp"
+                    android:layout_marginBottom="20dp"
+                	android:layout_marginTop="15dp"
                     android:layout_alignParentLeft="true" >
 
                     <ImageView
@@ -102,21 +108,23 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="20dp"
+                    android:layout_height="50dp"
                     android:layout_marginLeft="40dp"
-                    android:layout_marginRight="90dp" >
+                    android:layout_marginRight="90dp"
+                    android:layout_marginBottom="5dp"
+                    >
 
                     <EditText
                         android:id="@+id/login_user_password"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:layout_centerVertical="true"
                         android:background="@null"
                         android:hint="密码"
                         android:password="true"
                         android:singleLine="true"
                         android:textColorHint="@color/login_tv_hint_color"
-                        android:maxLength="50"
+                        android:maxLength="20"
                         android:textSize="15sp" />
                 </RelativeLayout>
 
@@ -124,6 +132,8 @@
                     android:id="@+id/login_user_forget_password_rel"
                     android:layout_width="65dp"
                     android:layout_height="20dp"
+                    android:layout_marginBottom="20dp"
+                	android:layout_marginTop="15dp"
                     android:layout_alignParentRight="true"
                     >
                     
@@ -142,6 +152,8 @@
                     android:id="@+id/login_user_password_cancel_rel"
                     android:layout_width="25dp"
                     android:layout_height="20dp"
+                    android:layout_marginBottom="20dp"
+                	android:layout_marginTop="15dp"
                     android:layout_toLeftOf="@id/login_user_forget_password_rel"
                     >
 
