--- a/QiuBai/res/values/colors.xml
+++ b/QiuBai/res/values/colors.xml
@@ -51,6 +51,9 @@
     <color name="register_title_text_color">#FFFFFF</color>
     <color name="register_title_bar_bg_color">#EB413D</color>
     <color name="register_tv_register_color">#FFFFFF</color>
+    <color name="register_tv_hint_color">#CCCCCC</color>
+    <color name="register_tv_prompt_color">#888888</color>
+    <color name="register_tv_prompt_content_color">#AAAAAA</color>
     
     <!-- common action bar -->
     <color name="common_action_content_text_color">#3F3F3F</color>
