--- a/QiuBai/res/layout/register_activity.xml
+++ b/QiuBai/res/layout/register_activity.xml
@@ -1,225 +1,218 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/register_scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/register_bg_color"
-    android:orientation="vertical" >
+    android:background="@color/register_bg_color" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="20dp"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:background="@drawable/register_base_white_bg"
         android:orientation="vertical" >
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            >
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="30dp"
-                android:layout_alignParentLeft="true"
-                >
-
-                <EditText
-                    android:id="@+id/register_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_centerInParent="true"
-                    android:background="@null"
-                    android:hint="请输入您的邮箱"
-                    android:singleLine="true"
-                    android:textColorHint="@color/register_tv_hint_color"
-                    android:inputType="textEmailAddress"
-                    android:textSize="15sp" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="30dp"
-                android:layout_height="50dp"
-                android:layout_alignParentRight="true"
-                >
-
-                <ImageView
-                    android:id="@+id/register_email_iv_cancel"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/login_base_text_edit_delete"
-                    android:visibility="invisible"
-                    />
-            </RelativeLayout>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/common_divider" >
-        </RelativeLayout>
-        
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            >
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="30dp"
-                android:layout_alignParentLeft="true"
-                >
-
-                <EditText
-                    android:id="@+id/register_nick_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_centerInParent="true"
-                    android:background="@null"
-                    android:hint="请输入3~10位字符的昵称"
-                    android:singleLine="true"
-                    android:textColorHint="@color/register_tv_hint_color"
-                    android:textSize="15sp" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="30dp"
-                android:layout_height="50dp"
-                android:layout_alignParentRight="true"
-                >
-
-                <ImageView
-                    android:id="@+id/register_nick_name_iv_cancel"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/login_base_text_edit_delete" 
-                    android:visibility="invisible"
-                    />
-            </RelativeLayout>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/common_divider" >
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            >
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="50dp" >
-
-                <EditText
-                    android:id="@+id/register_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:background="@null"
-                    android:layout_centerInParent="true"
-                    android:hint="请输入6~20位字符的密码"
-                    android:password="true"
-                    android:singleLine="true"
-                    android:textColorHint="@color/register_tv_hint_color"
-                    android:maxLength="20"
-                    android:textSize="15sp" />
-            </RelativeLayout>
-            
-            <RelativeLayout
-                android:layout_width="30dp"
-                android:layout_height="50dp"
-                android:layout_alignParentRight="true"
-                >
-
-                <ImageView
-                    android:id="@+id/register_password_iv_cancel"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/login_base_text_edit_delete" 
-                    android:visibility="invisible"
-                    />
-            </RelativeLayout>
-        </RelativeLayout>
-
-    </LinearLayout>
-    
-    <LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        >
-        <LinearLayout 
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
-            <TextView 
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
-	            android:text="友情提示："
-	            android:textSize="15sp"
-	            android:textColor="@color/register_tv_prompt_color"
-	            />
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/register_base_white_bg"
+            android:orientation="vertical" >
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp" >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="30dp" >
+
+                    <EditText
+                        android:id="@+id/register_email"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_centerInParent="true"
+                        android:background="@null"
+                        android:hint="邮箱"
+                        android:inputType="textEmailAddress"
+                        android:singleLine="true"
+                        android:textColorHint="@color/register_tv_hint_color"
+                        android:textSize="15sp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="30dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentRight="true" >
+
+                    <ImageView
+                        android:id="@+id/register_email_iv_cancel"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/login_base_text_edit_delete"
+                        android:visibility="invisible" />
+                </RelativeLayout>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/common_divider" >
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp" >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="30dp" >
+
+                    <EditText
+                        android:id="@+id/register_nick_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_centerInParent="true"
+                        android:background="@null"
+                        android:hint="3~10位字符的昵称"
+                        android:singleLine="true"
+                        android:textColorHint="@color/register_tv_hint_color"
+                        android:textSize="15sp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="30dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentRight="true" >
+
+                    <ImageView
+                        android:id="@+id/register_nick_name_iv_cancel"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/login_base_text_edit_delete"
+                        android:visibility="invisible" />
+                </RelativeLayout>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/common_divider" >
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp" >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="50dp" >
+
+                    <EditText
+                        android:id="@+id/register_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_centerInParent="true"
+                        android:background="@null"
+                        android:hint="6~20位字符的密码"
+                        android:maxLength="20"
+                        android:password="true"
+                        android:singleLine="true"
+                        android:textColorHint="@color/register_tv_hint_color"
+                        android:textSize="15sp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="30dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentRight="true" >
+
+                    <ImageView
+                        android:id="@+id/register_password_iv_cancel"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/login_base_text_edit_delete"
+                        android:visibility="invisible" />
+                </RelativeLayout>
+            </RelativeLayout>
         </LinearLayout>
-        <LinearLayout 
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="5dp"
-            >
-            <TextView 
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
-	            android:text="请输入您常用的邮箱，万一您忘记密码或者密码被盗，您可以通过邮箱找回密码。"
-	            android:textSize="13sp"
-	            android:textColor="@color/register_tv_prompt_content_color"
-	            />
-        </LinearLayout>
-        
-        
-    </LinearLayout>
-    
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="30dp"
-        android:orientation="vertical" >
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical" >
 
-        <RelativeLayout
-            android:id="@+id/register_user_register"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/register_button_register_press_bg"
-            >
-
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="注  册"
-                android:textColor="@color/register_tv_register_color"
-                android:textSize="16sp" />
-        </RelativeLayout>
+                android:orientation="vertical" >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="友情提示："
+                    android:textColor="@color/register_tv_prompt_color"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="请输入您常用的邮箱，万一您忘记密码或者密码被盗，您可以通过邮箱找回密码。"
+                    android:textColor="@color/register_tv_prompt_content_color"
+                    android:textSize="13sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="30dp"
+            android:orientation="vertical" >
+
+            <RelativeLayout
+                android:id="@+id/register_user_register"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/register_button_register_press_bg" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="注  册"
+                    android:textColor="@color/register_tv_register_color"
+                    android:textSize="16sp" />
+            </RelativeLayout>
+        </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
