--- a/QiuBai/res/values/colors.xml
+++ b/QiuBai/res/values/colors.xml
@@ -55,8 +55,16 @@
     <color name="register_tv_prompt_color">#888888</color>
     <color name="register_tv_prompt_content_color">#AAAAAA</color>
     
+    <!-- forget password activity -->
+    <color name="fpw_title_bar_bg_color">#EB413D</color>
+    <color name="fpw_title_text_color">#FFFFFF</color>
+    
+    
     <!-- common action bar -->
     <color name="common_action_content_text_color">#3F3F3F</color>
+    
+    <!-- common progress dialog -->
+    <color name="common_progress_dialog_bg_color">#00000000</color>
     
     <!-- guide_activity_dot_normal.xml -->
     <color name="guide_activity_dot_normal_color">#55000000</color>
