--- a/QiuBai/res/values/styles.xml
+++ b/QiuBai/res/values/styles.xml
@@ -15,6 +15,15 @@
         <item name="android:backgroundDimEnabled">false</item>
     </style>
     
+    <style name="CommonProgressDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item> 
+        <item name="android:windowBackground">@color/common_progress_dialog_bg_color</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+    
     <!-- CharacterDetailActivity -->
     <style name="CharacterDetailCustomWindowTitleBackground">
         <item name="android:background">@drawable/cd_title_bar_bg</item>
@@ -55,6 +64,16 @@
         <item name="android:windowTitleBackgroundStyle">@style/RegisterWindowTitleBackground</item>
     </style>
     
+    <!-- Forget Password Activity -->
+    <style name="ForgetPasswordWindowTitleBackground">
+        <item name="android:background">@color/fpw_title_bar_bg_color</item>
+    </style>
+    
+    <style name="ForgetPasswrodTitleBarStyle" parent="android:Theme">
+        <item name="android:windowTitleSize">45dp</item>
+        <item name="android:windowTitleBackgroundStyle">@style/ForgetPasswordWindowTitleBackground</item>
+    </style>
+    
     <!-- Custom MainTitleBarStyle -->
     <style name="MainTitleBarStyle" parent="AppBaseTheme">
         <item name="android:windowTitleSize">45dp</item>
@@ -63,15 +82,11 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:animationDuration">5000</item>
         <item name="android:windowContentOverlay">@null</item>
-       
-        
     </style>
     
     <style name="MainCustomWindowTitleBackground">
         <item name="android:background">@drawable/main_title_bar_bg</item>
     </style>
-    
- 	
 
     <style name="MyWidget.TabPageIndicator" parent="Widget">
         <item name="android:gravity">center</item>
@@ -86,7 +101,6 @@
     </style>
 
     <style name="MyTextAppearance.TabPageIndicator" parent="Widget">
-        
         <item name="android:textColor">@color/activity_main_gray</item>
     </style>
     
