--- a/QiuBai/res/layout/cd_activity.xml
+++ b/QiuBai/res/layout/cd_activity.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cd_activity_bg_color"
-    android:orientation="vertical" >
+    android:background="@color/cd_activity_bg_color" >
 
     <ScrollView
-        android:id="@+id/cd_scroll_content"
+        android:id="@+id/cd_scroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:layout_marginBottom="45dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,21 +41,20 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    >
+                    android:orientation="horizontal" >
 
                     <TextView
                         android:id="@+id/cd_tv_from"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="12sp" />
-                    <TextView 
+
+                    <TextView
                         android:id="@+id/cd_tv_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
-                        android:textSize="12sp"
-                        />
+                        android:textSize="12sp" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -75,4 +75,86 @@
         </LinearLayout>
     </ScrollView>
 
-</LinearLayout>
+    <LinearLayout 
+        android:layout_height="45dp"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:background="#FFFFFF"
+        >
+        <RelativeLayout 
+            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            >
+            
+            <LinearLayout 
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:orientation="horizontal"
+                >
+                <ImageView 
+                    android:id="@+id/cd_iv_support"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="5dp"
+                    android:src="@drawable/cd_support_inactive"
+                    />
+                <TextView 
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="4590"
+                    android:textSize="14sp"
+                    android:textColor="#333333"
+                    />
+            </LinearLayout>
+            
+        </RelativeLayout>
+        
+        <RelativeLayout 
+            android:layout_width="2px"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/common_divider_vertical"
+            >
+            
+        </RelativeLayout>
+        
+        <RelativeLayout
+            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            >
+            
+            <LinearLayout 
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_centerInParent="true"
+                >
+                <ImageView 
+                    android:id="@+id/cd_iv_tread"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="15dp"
+                    android:src="@drawable/cd_tread_inactive"
+                    />
+                <TextView 
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="4590"
+                    android:textSize="14sp"
+                    android:textColor="#333333"
+                    />
+            </LinearLayout>
+            
+        </RelativeLayout>
+        
+    </LinearLayout>
+</RelativeLayout>
