--- a/QiuBai/res/layout/cd_title.xml
+++ b/QiuBai/res/layout/cd_title.xml
@@ -40,17 +40,21 @@
     </RelativeLayout>
     
     <RelativeLayout 
-        android:layout_width="80dp"
+        android:id="@+id/cd_rel_comment"
+        android:layout_width="wrap_content"
         android:layout_height="45dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:layout_toLeftOf="@id/title_rel_right"
+        android:background="@drawable/common_layout_press_bg"
         >
         
         <TextView 
-            android:id="@+id/cd_tv_support"
+            android:id="@+id/cd_tv_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textColor="#FF0000"
+            android:textColor="@color/cd_title_comment_text_color"
             />
         
     </RelativeLayout>
