--- a/QiuBai/res/values/colors.xml
+++ b/QiuBai/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="cd_activity_bg_color">#F6F6F6</color>
     <color name="cd_content_title_text_color">#000000</color>
     <color name="cd_content_text_color">#333333</color>
+    <color name="cd_title_comment_text_color">#FF0000</color>
     
     <!-- comment activity -->
     <color name="comment_activity_bg_color">#F6F6F6</color>
