--- a/QiuBai/res/layout/cd_activity.xml
+++ b/QiuBai/res/layout/cd_activity.xml
@@ -42,7 +42,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal" >
-
+                    
+                    <TextView 
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:text="来自："
+                        />
+                    
                     <TextView
                         android:id="@+id/cd_tv_from"
                         android:layout_width="wrap_content"
@@ -75,7 +82,7 @@
         </LinearLayout>
     </ScrollView>
 
-    <LinearLayout 
+    <LinearLayout
         android:layout_height="45dp"
         android:layout_width="match_parent"
         android:orientation="horizontal"
@@ -98,19 +105,20 @@
                 >
                 <ImageView
                     android:id="@+id/cd_iv_support"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_width="45dp"
+                    android:layout_height="30dp"
+                    android:paddingTop="5dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:src="@drawable/cd_support_inactive"
                     />
                 <TextView 
+                    android:id="@+id/cd_tv_support"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:paddingLeft="10dp"
-                    android:text="4590"
                     android:textSize="14sp"
-                    android:textColor="#333333"
+                    android:textColor="@color/cd_support_text_color"
                     />
             </LinearLayout>
             
@@ -142,19 +150,20 @@
                 >
                 <ImageView 
                     android:id="@+id/cd_iv_tread"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_width="45dp"
+                    android:layout_height="40dp"
+                    android:paddingTop="15dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:src="@drawable/cd_tread_inactive"
                     />
                 <TextView 
+                    android:id="@+id/cd_tv_tread"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    android:paddingLeft="10dp"
                     android:layout_gravity="center_vertical"
-                    android:text="4590"
                     android:textSize="14sp"
-                    android:textColor="#333333"
+                    android:textColor="@color/cd_tread_text_color"
                     />
             </LinearLayout>
             
