--- a/QiuBai/res/values/colors.xml
+++ b/QiuBai/res/values/colors.xml
@@ -23,6 +23,8 @@
     <color name="cd_content_title_text_color">#000000</color>
     <color name="cd_content_text_color">#333333</color>
     <color name="cd_title_comment_text_color">#FF0000</color>
+    <color name="cd_support_text_color">#333333</color>
+    <color name="cd_tread_text_color">#333333</color>
     
     <!-- comment activity -->
     <color name="comment_activity_bg_color">#F6F6F6</color>
