--- a/QiuBai/res/values/colors.xml
+++ b/QiuBai/res/values/colors.xml
@@ -26,6 +26,9 @@
     <color name="cd_support_text_color">#333333</color>
     <color name="cd_tread_text_color">#333333</color>
     
+    <!-- character detial action bar -->
+    <color name="cd_action_text_color">#3F3F3F</color>
+    
     <!-- comment activity -->
     <color name="comment_activity_bg_color">#F6F6F6</color>
     <color name="comment_listview_item_username_color">#1E88E5</color>
