--- a/QiuBai/res/layout/comment_activity.xml
+++ b/QiuBai/res/layout/comment_activity.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="40dp"
             android:background="@null"
-            android:hint="写评论"
+            android:hint="写跟帖"
             android:inputType="textMultiLine"
             android:maxLength="500"
             android:maxLines="3"
@@ -42,6 +42,14 @@
             android:text="发送" />
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_above="@id/comment_lin_edit"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@drawable/comment_reply_fade"
+        >   
+    </RelativeLayout>
+    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
