--- a/QiuBai/res/values/styles.xml
+++ b/QiuBai/res/values/styles.xml
@@ -18,7 +18,7 @@
     <style name="CommonDialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowNoTitle">true</item> 
-        <item name="android:windowBackground">@null</item>
+        <item name="android:windowBackground">@color/common_dialog_bg_color</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowContentOverlay">@null</item>  
         <item name="android:backgroundDimEnabled">true</item>
