--- a/QiuBai/res/layout/common_refresh_listview_footer.xml
+++ b/QiuBai/res/layout/common_refresh_listview_footer.xml
@@ -7,7 +7,7 @@
     >
     
     <LinearLayout 
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_width="match_parent"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
@@ -15,6 +15,7 @@
         >
         
         <TextView 
+            android:id="@+id/comment_listview_footer_loading"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center_horizontal"
