--- a/QiuBai/res/layout/comment_activity.xml
+++ b/QiuBai/res/layout/comment_activity.xml
@@ -50,18 +50,21 @@
         >   
     </RelativeLayout>
     
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/comment_lin_edit"
-        android:orientation="vertical" >
+        android:layout_above="@id/comment_lin_edit" >
 
+        <include 
+            layout="@layout/common_refresh_listview_header_hidden"
+            />
+        
         <com.qiubai.view.CommonRefreshListView
             android:id="@+id/comment_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:divider="@null" >
         </com.qiubai.view.CommonRefreshListView>
-    </LinearLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
