--- a/QiuBai/res/layout/comment_activity.xml
+++ b/QiuBai/res/layout/comment_activity.xml
@@ -43,9 +43,11 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/comment_rel_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/comment_lin_edit" >
+        android:layout_above="@id/comment_lin_edit"
+        android:visibility="invisible" >
 
         <include 
             layout="@layout/common_refresh_listview_header_hidden"
