--- a/QiuBai/res/values/styles.xml
+++ b/QiuBai/res/values/styles.xml
@@ -33,6 +33,15 @@
         <item name="android:backgroundDimEnabled">false</item>
     </style>
     
+    <style name="CommonTitleBarBackgroundStyle">
+        <item name="android:background">@color/common_title_background_color</item>
+    </style>
+    
+    <style name="CommonTitleBarStyle" parent="android:Theme">
+        <item name="android:windowTitleSize">45dp</item>
+        <item name="android:windowTitleBackgroundStyle">@style/CommonTitleBarBackgroundStyle</item>
+    </style>
+    
     <!-- CharacterDetailActivity -->
     <style name="CharacterDetailCustomWindowTitleBackground">
         <item name="android:background">@drawable/cd_title_bar_bg</item>
@@ -54,34 +63,10 @@
     </style>
     
     <!-- Login Activity -->
-    <style name="LoginWindowTitleBackground">
-        <item name="android:background">@color/login_title_bar_bg_color</item>
-    </style>
-    
-    <style name="LoginTitleBarStyle" parent="android:Theme">
-        <item name="android:windowTitleSize">45dp</item>
-        <item name="android:windowTitleBackgroundStyle">@style/LoginWindowTitleBackground</item>
-    </style>
 
     <!-- Register Activity -->
-    <style name="RegisterWindowTitleBackground">
-        <item name="android:background">@color/register_title_bar_bg_color</item>
-    </style>
-    
-    <style name="RegisterTitleBarStyle" parent="android:Theme">
-        <item name="android:windowTitleSize">45dp</item>
-        <item name="android:windowTitleBackgroundStyle">@style/RegisterWindowTitleBackground</item>
-    </style>
     
     <!-- Forget Password Activity -->
-    <style name="ForgetPasswordWindowTitleBackground">
-        <item name="android:background">@color/fpw_title_bar_bg_color</item>
-    </style>
-    
-    <style name="ForgetPasswrodTitleBarStyle" parent="android:Theme">
-        <item name="android:windowTitleSize">45dp</item>
-        <item name="android:windowTitleBackgroundStyle">@style/ForgetPasswordWindowTitleBackground</item>
-    </style>
     
     <!-- Custom MainTitleBarStyle -->
     <style name="MainTitleBarStyle" parent="AppBaseTheme">
