--- a/QiuBai/res/layout/login_activity.xml
+++ b/QiuBai/res/layout/login_activity.xml
@@ -58,6 +58,7 @@
                         android:singleLine="true"
                         android:textColorHint="@color/login_tv_hint_color"
                         android:textSize="15sp"
+                        android:inputType="textEmailAddress"
                         android:maxLength="100"
                         />
                 </RelativeLayout>
