--- a/QiuBai/res/layout/register_activity.xml
+++ b/QiuBai/res/layout/register_activity.xml
@@ -87,6 +87,7 @@
                         android:background="@null"
                         android:hint="3~10位字符的昵称"
                         android:singleLine="true"
+                        android:maxLength="10"
                         android:textColorHint="@color/register_tv_hint_color"
                         android:textSize="15sp" />
                 </RelativeLayout>
