--- a/QiuBai/res/values/colors.xml
+++ b/QiuBai/res/values/colors.xml
@@ -80,6 +80,10 @@
     <!-- person activity -->
     <color name="person_bg_color">#F6F6F6</color>
     
+    <!-- person dialog nickname -->
+    <color name="person_dialog_font_tv_confirm_color">#368BCB</color>
+    <color name="person_dialog_font_tv_cancel_color">#BEBEBE</color>
+    
     <!-- common action bar -->
     <color name="common_action_content_text_color">#3F3F3F</color>
     
