改善添加城市

--- a/QiuBai/res/layout/city_list.xml
+++ b/QiuBai/res/layout/city_list.xml
@@ -20,8 +20,8 @@
             android:background="@drawable/main_rel_bg" >
 
             <ImageView
-                android:layout_width="60dp"
-                android:layout_height="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:src="@drawable/pt_title_back" />
         </RelativeLayout>
