--- a/QiuBai/res/layout/main_activity.xml
+++ b/QiuBai/res/layout/main_activity.xml
@@ -5,44 +5,72 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="35dp"
+        android:background="@color/main_viewpager_title_bg_color"
         android:orientation="horizontal" >
 
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/main_viewpager_title_rel_hot"
             android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:orientation="vertical" >
+            android:layout_height="35dp"
+            android:layout_weight="1" >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="热门" />
-        </LinearLayout>
+                android:layout_centerInParent="true"
+                android:text="热门"
+                android:textColor="#AAAAAA"
+                android:textSize="15sp" />
 
-        <LinearLayout
+            <ImageView
+                android:id="@+id/main_viewpager_title_iv_hot"
+                android:layout_width="match_parent"
+                android:layout_height="2.5dp"
+                android:layout_alignParentBottom="true" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/main_viewpager_title_rel_character"
             android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:orientation="vertical" >
+            android:layout_height="35dp"
+            android:layout_weight="1" >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="文字" />
-        </LinearLayout>
+                android:layout_centerInParent="true"
+                android:text="文字"
+                android:textColor="#AAAAAA"
+                android:textSize="15sp" />
 
-        <LinearLayout
+            <ImageView
+                android:id="@+id/main_viewpager_title_iv_character"
+                android:layout_width="match_parent"
+                android:layout_height="2.5dp"
+                android:layout_alignParentBottom="true" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/main_viewpager_title_rel_picture"
             android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:orientation="vertical" >
+            android:layout_height="35dp"
+            android:layout_weight="1" >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="图片" />
-        </LinearLayout>
+                android:layout_centerInParent="true"
+                android:text="图片"
+                android:textColor="#AAAAAA"
+                android:textSize="15sp" />
+
+            <ImageView
+                android:id="@+id/main_viewpager_title_iv_picture"
+                android:layout_width="match_parent"
+                android:layout_height="2.5dp"
+                android:layout_alignParentBottom="true" />
+        </RelativeLayout>
     </LinearLayout>
 
     <android.support.v4.view.ViewPager
@@ -50,28 +78,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
     </android.support.v4.view.ViewPager>
-
-    <!--
-    <com.viewpagerindicator.TabPageIndicator
-        android:id="@+id/main_indicator"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/cd_title_bar_bg"
-         >
-    </com.viewpagerindicator.TabPageIndicator> -->
-
-
-    <!--
-    <FrameLayout
-        android:id="@+id/content"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" >
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/main_tab_viewpager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" /> 
-    </FrameLayout>-->
 
 </LinearLayout>
