--- a/QiuBai/res/layout/common_refresh_listview_header_hidden.xml
+++ b/QiuBai/res/layout/common_refresh_listview_header_hidden.xml
@@ -21,8 +21,9 @@
 
                 <ImageView
                     android:id="@+id/crl_clock_bg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:scaleType="centerInside"
                     android:layout_centerInParent="true" />
             </RelativeLayout>
 
