--- a/QiuBai/res/layout/main_activity.xml
+++ b/QiuBai/res/layout/main_activity.xml
@@ -16,6 +16,7 @@
             android:layout_weight="1" >
 
             <TextView
+                android:id="@+id/main_viewpager_title_tv_hot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -37,6 +38,7 @@
             android:layout_weight="1" >
 
             <TextView
+                android:id="@+id/main_viewpager_title_tv_character"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -58,6 +60,7 @@
             android:layout_weight="1" >
 
             <TextView
+                android:id="@+id/main_viewpager_title_tv_picture"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
